--- a/package.json
+++ b/package.json
@@ -15,7 +15,17 @@
     "commands": [
       {
         "command": "tsuml2-vscode.showClassDiagram",
-        "title": "Show Class Diagram"
+        "title": "Show Class Diagram",
+        "icon": "./assets/tsuml2-small.svg"
+      },
+      {
+        "command": "tsuml2-vscode.showMermaidDSL",
+        "title": "Export Mermaid DSL",
+        "icon": "./assets/mermaid-logo.svg"
+      },
+      {
+        "command": "tsuml2-vscode.showNomnomlDSL",
+        "title": "Export nomnoml DSL"
       }
     ],
     "menus": {
@@ -32,8 +42,30 @@
           "command": "tsuml2-vscode.showClassDiagram",
           "group": "navigation"
         }
+      ],
+      "editor/title/run": [
+        {
+          "submenu": "tsuml2.editor.title.run",
+          "when": "activeWebviewPanelId == tsuml2"
+        }
+      ],
+      "tsuml2.editor.title.run": [
+        {
+          "command": "tsuml2-vscode.showNomnomlDSL"
+        },
+        {
+          "command": "tsuml2-vscode.showMermaidDSL"
+        }
       ]
     },
+    "submenus": [
+      {
+        "id": "tsuml2.editor.title.run",
+        "label": "TsUML2",
+        "icon": "./assets/tsuml2-small.svg",
+        "when": "resourceLangId == typescript"
+      }
+    ],
     "configuration": {
       "title": "TsUML2",
       "properties": {
