--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "tsuml2-vscode",
   "displayName": "TsUML2-vscode",
   "description": "TsUML2: class diagrams for your typescript code",
-  "version": "0.0.1",
+  "icon": "assets/logo.png",
+  "version": "0.0.2",
   "publisher": "demike",
   "repository": {
     "type": "git",
